--- a/companys/NASA.html
+++ b/companys/NASA.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">США</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Ванденберг | Среднеатлантический региональный космопорт | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Ванденберг | Среднеатлантический региональный космопорт </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Minotaur-C.html">Minotaur-C</a> <a href="/rockets/Antares.html">Antares</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">29 июля 1958 </span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
