--- a/companys/Rocket_Lab.html
+++ b/companys/Rocket_Lab.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">Новая Зеландия</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Rocket Lab LC-1 | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Rocket Lab LC-1 </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Electron.html">Electron</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">2006 год</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
