--- a/companys/Roskosmos.html
+++ b/companys/Roskosmos.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">Россия</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Байконур | Ванденберг | Плесецк | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Байконур | Ванденберг | Плесецк </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Союз.html">Союз</a> <a href="/rockets/Союз-2.1а.html">Союз-2.1а</a> <a href="/rockets/Союз-У.html">Союз-У</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">1992 год</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
