--- a/companys/SpaceX.html
+++ b/companys/SpaceX.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">США</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Испытательный полигон Рейгана | КЦ Кеннеди | Мыс Канаверал | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Испытательный полигон Рейгана | КЦ Кеннеди | Мыс Канаверал </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Falcon 1.html">Falcon 1</a> <a href="/rockets/Falcon 9.html">Falcon 9</a> <a href="/rockets/Falcon Heavy.html">Falcon Heavy</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">6 мая 2002</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
