--- a/companys/United_Launch_Alliance.html
+++ b/companys/United_Launch_Alliance.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">США</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Ванденберг | Мыс Канаверал | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Ванденберг | Мыс Канаверал </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Atlas-D.html">Atlas-D</a> <a href="/rockets/Atlas-II.html">Atlas-II</a> <a href="/rockets/Atlas-III.html">Atlas-III</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">1 декабря 2006</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
