--- a/companys/Virgin_Orbit.html
+++ b/companys/Virgin_Orbit.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">США</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Мохаве | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Мохаве </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/LauncherOne.html">LauncherOne</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">2 марта 2017</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
