--- a/companys/Firefly_Aerospace.html
+++ b/companys/Firefly_Aerospace.html
@@ -34,7 +34,7 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">США</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning">Ванденберг | </span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Ванденберг </span></p>
                                 <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Firefly Alpha.html">Firefly Alpha</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">Январь 2014</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
