withdrawal of missions
Added a script for the output of missions, as well as changed the design of the catalog

--- a/companys/Astra_Inc..html
+++ b/companys/Astra_Inc..html
@@ -34,8 +34,8 @@
                             </section>
                             <section class="company-statistics">
                                 <p>Страна: <span class="company-statistic__meaning"><a href="/company.html">США</a></span></p>
-                                <p>Космодромы: <span class="company-statistic__meaning"></span></p>
-                                <p>Ракеты: <span class="company-statistic__meaning"></span></p>
+                                <p>Космодромы: <span class="company-statistic__meaning">Кадьяк </span></p>
+                                <p>Ракеты: <span class="company-statistic__meaning"> <a href="/rockets/Rocket 3.3.html">Rocket 3.3</a></span></p>
                                 <p>Дата основания: <span class="company-statistic__meaning">Сентябрь 2016</span></p>
                                 <h2 class="company-statistics__launch-statistic">Статистика запусков</h2>
                                 <p>Всего запусков: <span class="company-statistic__meaning">10</span></p>
@@ -96,7 +96,7 @@
                     <section class="company-more-info">
                         <div class="company-more-info__element company-more-info__rockets">
                             <h2>Ракеты-носители</h2>
-                            
+                            <a href="Rocket 3.3">Rocket 3.3</a>
                         </div>
                         <div class="company-more-info__element company-more-info__unused-rockets">
                             <h2>Неиспользуемые ракеты-носители</h2>
